--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -8,7 +8,7 @@
 #video-bg {
    position: absolute;
    width: 100%;
-   height: auto;
+   max-height: 100%;
    min-height: 100%;
    object-fit: cover;
    z-index: -1;
@@ -26,6 +26,7 @@
    align-items: center;
    color: white;
    text-align: center;
+   padding: 0 20px; /* Add horizontal padding for responsiveness */
 }
 
 .testimonial-card {
@@ -66,4 +67,16 @@
 }
 .testimonial-card:hover .testimonial-content {
    opacity: 1;
+}
+
+.image-section {
+   margin-bottom: 100px;
+}
+
+.icon-section {
+   margin-bottom: 100px;
+}
+
+.testimonial-section {
+   margin-bottom: 100px;
 }
