--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -11,3 +11,9 @@ h5,
 h6 {
    font-family: "Ubuntu", sans-serif;
 }
+
+.container {
+   max-width: 800px;
+   margin: 0 auto;
+   padding: 1.2rem 1rem;
+}
