--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -53,12 +53,12 @@
 /* Custom styles for smaller screens */
 @media (max-width: 991.98px) {
    .navbar .navbar-collapse {
-      background-color: rgba(0, 0, 0, 0.3);
+      background-color: rgb(0, 0, 0);
       position: absolute;
       right: 0;
       top: 100%;
       width: auto;
       z-index: 1000;
-      margin-right: 10px; /* Adjust this value as needed */
+      margin-right: 1px; /* Adjust this value as needed */
    }
 }
