navbar styling update

--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -6,10 +6,14 @@
 }
 
 #video-bg {
-   position: absolute;
-   width: 100%;
-   max-height: 100%;
+   min-width: 100%;
    min-height: 100%;
+   width: auto;
+   height: auto;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
    object-fit: cover;
    z-index: -1;
 }
