--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -53,12 +53,14 @@
 /* Custom styles for smaller screens */
 @media (max-width: 991.98px) {
    .navbar .navbar-collapse {
-      background-color: rgb(0, 0, 0);
+      background-color: rgba(0, 0, 0, 0.8);
       position: absolute;
       right: 0;
       top: 100%;
       width: auto;
       z-index: 1000;
       margin-right: 1px; /* Adjust this value as needed */
+      padding-left: 1rem;
+      padding-right: 1rem;
    }
 }
