--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,6 +1,6 @@
 /* Change the background color of the navbar */
 .navigation {
-   background-color: #333;
+   background-color: #000;
    height: 5rem;
    z-index: 1000;
 }
@@ -22,21 +22,32 @@
 /* Change the color of the brand text */
 .navbar-brand {
    color: #fff;
+   font-size: 2.2rem; /* Increase the font size of the title */
 }
 
 /* Change the color of the brand text on hover */
 .navbar-brand:hover {
    color: #ccc;
 }
+
 /* Add space between nav links using Flexbox */
 .navbar .nav {
    display: flex;
-   justify-content: space-between; /* Change to 'space-between' if you want the items to be spaced edge-to-edge */
+   justify-content: space-between;
 }
 
 /* Set a max-width for the nav container for responsiveness */
 .navbar .container {
    max-width: 1200px;
+   display: flex;
+   justify-content: space-between;
+}
+
+.container-right {
+   max-width: 1200px;
+   display: flex;
+   justify-content: flex-end; /* Change "end" to "flex-end" */
+   margin-right: 2rem; /* Add space between the container-right and the right side edge */
 }
 
 /* For smaller screens, add some padding and set nav links to full width */
@@ -62,5 +73,13 @@
       margin-right: 1px; /* Adjust this value as needed */
       padding-left: 1rem;
       padding-right: 1rem;
+   }
+
+   .navbar-toggle {
+      position: absolute;
+      right: 0;
+      top: 0;
+      margin-right: 1rem;
+      margin-top: 1rem;
    }
 }
