welcome page updates

--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -81,6 +81,11 @@
    margin-bottom: 100px;
 }
 
+.icon-section > div {
+   margin-top: 20px;
+   margin-bottom: 20px;
+}
+
 .testimonial-section {
    margin-bottom: 10px;
 }
